# deja-lib

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  README.md  justfile  rust-toolchain.toml
.github/workflows/: ci.yml
crates/deja/: Cargo.toml
crates/deja-compactor/: Cargo.toml
crates/deja-compactor/src/: lib.rs  main.rs
crates/deja-context/: Cargo.toml
crates/deja-context/src/: lib.rs
crates/deja-core/: Cargo.toml
crates/deja-core/src/: lib.rs
crates/deja-core/tests/: artifact_schema.rs
crates/deja-derive/: Cargo.toml
crates/deja-derive/src/: boundary.rs  instrument.rs  lib.rs  recordable.rs
crates/deja-record/: Cargo.toml
crates/deja-record/src/: correlation_layer.rs  graph.rs  lib.rs  replay.rs  writer.rs
crates/deja-record/tests/: execution_graph_layer.rs  recordable_integration.rs  replay_integration.rs
crates/deja-tui/: Cargo.toml  README.md
crates/deja-tui/src/: lib.rs  main.rs
crates/deja-tui/tests/: load_summary.rs
crates/deja/src/: lib.rs
crates/deja/tests/: boundary_inactive.rs  boundary_macro.rs  v2_regression.rs
crates/replay-harness-api/: Cargo.toml
crates/replay-harness-api/src/: lib.rs  main.rs
crates/replay-harness-api/src/api/: mod.rs  runs.rs
crates/replay-harness-api/src/divergence/: ledger.rs  mod.rs
crates/replay-harness-api/src/lifecycle/: mod.rs  store_ctx.rs
crates/replay-harness-api/src/lookup/: mod.rs
crates/replay-harness-api/src/s3/: mod.rs
crates/replay-harness-api/src/store/: mod.rs
crates/replay-harness-kernel/: Cargo.toml
crates/replay-harness-kernel/src/: lib.rs  main.rs
crates/replay-harness-store/: Cargo.toml
crates/replay-harness-store/migrations/: 0001_init.sql  0002_artifact_kinds.sql  0003_session_manifests.sql  0004_call_ledger_artifact.sql
crates/replay-harness-store/src/: lib.rs
demo/: Dockerfile.hyperswitch-semantic  docker-compose.orchestrator.yml  lib.sh  migration-runner.sh  run-deja-demo.sh  run-deja-matrix.sh  run-deja-parallel.sh  visualize-replay.py  workload.sh
demo/cross-version/: README.md  benign-line-shift.patch  dropped-write.patch  earlier-fork.patch  eu-overcharge.patch  extra-call.patch  real-change.patch  response-only.patch
docs/: AREX_ANALYSIS.md  CURSOR_REPLAY_CORRECTNESS_ANALYSIS.md  DEJA_RECORDING_ARCHITECTURE.md  HS_PR_PLAN.md  HYPERSWITCH_REPLAY_AMBIGUITY_REPORT.md  LOGICAL_CONTEXT_ADDRESSING.md  PHASE1_WEB_MATRIX_PLAN.md  PHASE2_RECORDING_STORE_PLAN.md  PR_BODY.md  PR_FINALIZATION.md  REPLAY_PLATFORM_DESIGN.md  SPEEDSCALE_COMPARISON.md  SPEEDSCALE_INSIGHTS.md  TRI_SYSTEM_SYNTHESIS.md
docs/design/: completeness-critique.md  dashboard-ux.md  declarative-boundary-model.md  effects-as-handlers.md  packaging.md  recording-capture-decoupled.md  replay-pipeline.md  s3-store.md
docs/history/: ASYNC_RUNTIME_ATTRIBUTION_NOTES.md  CLEANUP_PLAN.md  CORRELATION_ARCHITECTURE.md  DEJA_PROJECT_SHORT_NOTES.md  FULL_MOCK_REPLAY_PRD.md  OWNED_STATE_SEEDED_REPLAY_VS_CYCLING.md  PRELOAD_BENCHMARK_FRAMEWORK.md  PRELOAD_REPLAY_PIPELINE.md  PRELOAD_ROADMAP.md  PRELOAD_V1_ARCHITECTURE.md  PRELOAD_WRITER_PLAN.md  REDIS_FRED_TOKIO_CORRELATION.md  REPLAY_LOOKUP_AMBIGUITY_TAXONOMY.md  SIGNATURE_VS_CORRELATION_ANALYSIS.md  STATE_SEEDED_REPLAY.md  TOKIO_CORRELATION_PLAN.md  TOKIO_INTEGRATION_ROADMAP.md
docs/history/patches/: fred-recv-attribution-spike-fred-deja.patch  fred-recv-attribution-spike-manifest.patch
docs/history/spikes/: FRED_RECV_ATTRIBUTION_SPIKE.md
docs/history/tickets/: architect-capture-correctness.md
docs/hyperswitch-cascade/: 01_ROUTE_CATALOG.md  02_HANDLER_CALL_GRAPHS.md  03_DEPENDENCY_CASCADES.md  03_DEPENDENCY_CASCADES_FULL.md  03_DEPENDENCY_CASCADES_FULL_RUST_BRAIN.md  04_AMBIGUITY_MATRIX.md  05_ROUTE_CENTERED_FINDINGS.md  06_DB_REDIS_AMBIGUITY_PATTERNS.md  07_FIRE_AND_FORGET_ASYNC_PATTERNS.md  08_MCP_RERUN_QUERY_GUIDE.md  09_FULL_ROUTE_SAME_REQUEST_VALIDATION.md
docs/hyperswitch-cascade/graphs/: chat-ai-fire-and-forget.mmd  payments-create-confirm-v2.mmd
scripts/: export-public.sh
web/: .gitignore  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: main.tsx  styles.css
web/src/components/: Confidence.tsx  DiffView.tsx  GraphView.tsx  JsonDiff.tsx  JsonView.tsx
web/src/lib/: api.ts  argdiff.ts
web/src/pages/: AuditPage.tsx  NewRunPage.tsx  RecordingsPage.tsx  RunDetailPage.tsx  RunsPage.tsx  ScorecardPage.tsx
