[package]
description = "Deja event schema and artifact validation: SemanticEvent shape, correlation health, recording manifests."
name = "deja-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
autotests = false

[lib]
path = "src/lib.rs"
test = false
doctest = false

[[test]]
name = "artifact_schema"
path = "tests/artifact_schema.rs"
harness = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[lints]
workspace = true
