[package]
name = "deja-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Terminal artifact explorer for Deja semantic and execution graph captures"

[dependencies]
anyhow = "1"
crossterm = "0.27"
deja-core = { path = "../deja-core" }
deja-record = { path = "../deja-record" }
ratatui = "0.26"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true