[package]
description = "Facade crate for Deja record/replay: attribute-macro re-exports, payload helpers, and the runtime surface macro-generated code uses."
name = "deja"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
deja-context = { path = "../deja-context" }
deja-core = { path = "../deja-core" }
deja-derive = { path = "../deja-derive" }
deja-record = { path = "../deja-record" }
serde = "1"
serde_json = "1"


[dev-dependencies]
serde_json = "1"
tempfile = "3"

[lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
